// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert should render error alert correctly 1`] = `
.c3 {
  box-sizing: border-box;
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  line-height: 1;
  cursor: default;
  margin-right: 0.5rem;
}

.c2 svg {
  fill: #8b8b8b;
  vertical-align: middle;
  pointer-events: none;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c2.c2.c2 svg {
  fill: #fc5475;
  width: 20px;
  height: 20px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 1rem;
  padding: 0.5rem 1rem;
  border: 1px solid;
  border-radius: 0.25rem;
  border-color: #fc5475;
  background-color: rgba(252,84,117,0.1);
  font-size: 0.875rem;
  -webkit-transform-origin: top;
  -ms-transform-origin: top;
  transform-origin: top;
}

<div
  class="c0"
  type="error"
>
  <div
    class="c1"
  >
    <i
      class="c2"
      cursor="default"
      fill="error"
      size="20"
    >
      <svg
        height="32"
        viewBox="0 0 32 32"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M21.009 5.639l10.2 16.032c1.614 2.536.68 5.792-2.087 7.271a6.207 6.207 0 0 1-2.922.725H5.8c-3.204 0-5.8-2.38-5.8-5.317 0-.942.273-1.866.79-2.68L10.99 5.64c1.614-2.537 5.165-3.393 7.932-1.914a5.583 5.583 0 0 1 2.087 1.914zm-6.787 3.583v8.968c0 .4.07.687.2.932.131.244.323.436.568.567.244.13.531.2.932.2h.156c.4 0 .688-.07.932-.2.245-.131.437-.323.567-.567.131-.245.2-.532.2-.932V9.222h-3.555zm1.7 12.445c-.4 0-.688.07-.932.2-.245.13-.437.323-.567.567-.131.244-.2.532-.2.932v.157c0 .4.069.687.2.932.13.244.322.436.567.567.244.13.531.2.932.2h.156c.4 0 .688-.07.932-.2.245-.13.437-.323.567-.567.131-.245.2-.532.2-.932v-.157c0-.4-.069-.688-.2-.932a1.363 1.363 0 0 0-.567-.567c-.244-.13-.531-.2-.932-.2h-.156z"
          fill-rule="nonzero"
        />
      </svg>
    </i>
  </div>
  <div
    class="c3"
  >
    Error Text
  </div>
</div>
`;

exports[`Alert should render info alert correctly 1`] = `
.c3 {
  box-sizing: border-box;
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  line-height: 1;
  cursor: default;
  margin-right: 0.5rem;
}

.c2 svg {
  fill: #8b8b8b;
  vertical-align: middle;
  pointer-events: none;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c2.c2.c2 svg {
  fill: #4384f0;
  width: 20px;
  height: 20px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 1rem;
  padding: 0.5rem 1rem;
  border: 1px solid;
  border-radius: 0.25rem;
  border-color: #4384f0;
  background-color: rgba(67,132,240,0.1);
  font-size: 0.875rem;
  -webkit-transform-origin: top;
  -ms-transform-origin: top;
  transform-origin: top;
}

<div
  class="c0"
  type="info"
>
  <div
    class="c1"
  >
    <i
      class="c2"
      cursor="default"
      fill="info"
      size="20"
    >
      <svg
        height="32"
        viewBox="0 0 32 32"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9 1h14a8 8 0 0 1 8 8v14a8 8 0 0 1-8 8H9a8 8 0 0 1-8-8V9a8 8 0 0 1 8-8zm6.5 12a1.5 1.5 0 0 0-1.5 1.5V25h4V14.5a1.5 1.5 0 0 0-1.5-1.5h-1zm0-6A1.5 1.5 0 0 0 14 8.5v1a1.5 1.5 0 0 0 1.5 1.5h1A1.5 1.5 0 0 0 18 9.5v-1A1.5 1.5 0 0 0 16.5 7h-1z"
          fill-rule="nonzero"
        />
      </svg>
    </i>
  </div>
  <div
    class="c3"
  >
    Info Text
  </div>
</div>
`;

exports[`Alert should render success alert correctly 1`] = `
.c3 {
  box-sizing: border-box;
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  line-height: 1;
  cursor: default;
  margin-right: 0.5rem;
}

.c2 svg {
  fill: #8b8b8b;
  vertical-align: middle;
  pointer-events: none;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c2.c2.c2 svg {
  fill: #40d064;
  width: 20px;
  height: 20px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 1rem;
  padding: 0.5rem 1rem;
  border: 1px solid;
  border-radius: 0.25rem;
  border-color: #40d064;
  background-color: rgba(64,208,100,0.1);
  font-size: 0.875rem;
  -webkit-transform-origin: top;
  -ms-transform-origin: top;
  transform-origin: top;
}

<div
  class="c0"
  type="success"
>
  <div
    class="c1"
  >
    <i
      class="c2"
      cursor="default"
      fill="success"
      size="20"
    >
      <svg
        height="32"
        viewBox="0 0 32 32"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16 31C7.716 31 1 24.284 1 16 1 7.716 7.716 1 16 1c8.284 0 15 6.716 15 15 0 8.284-6.716 15-15 15zm6.113-20.19l-9.066 8.73-3.017-3.586a2 2 0 0 0-3.06 2.576l3.705 4.403a3 3 0 0 0 4.227.364c.076-.066.076-.066.15-.135l9.835-9.471a2 2 0 1 0-2.774-2.882z"
          fill-rule="nonzero"
        />
      </svg>
    </i>
  </div>
  <div
    class="c3"
  >
    Success Text
  </div>
</div>
`;

exports[`Alert should render warning alert correctly 1`] = `
.c3 {
  box-sizing: border-box;
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  line-height: 1;
  cursor: default;
  margin-right: 0.5rem;
}

.c2 svg {
  fill: #8b8b8b;
  vertical-align: middle;
  pointer-events: none;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c2.c2.c2 svg {
  fill: #f6a700;
  width: 20px;
  height: 20px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 1rem;
  padding: 0.5rem 1rem;
  border: 1px solid;
  border-radius: 0.25rem;
  border-color: #f6a700;
  background-color: rgba(246,167,0,0.1);
  font-size: 0.875rem;
  -webkit-transform-origin: top;
  -ms-transform-origin: top;
  transform-origin: top;
}

<div
  class="c0"
  type="warning"
>
  <div
    class="c1"
  >
    <i
      class="c2"
      cursor="default"
      fill="warning"
      size="20"
    >
      <svg
        height="32"
        viewBox="0 0 32 32"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20.566 3.47l7.964 7.964c1.587 1.588 1.998 2.329 2.268 3.22.27.89.27 1.801 0 2.692-.27.891-.68 1.632-2.268 3.22l-7.964 7.964c-1.588 1.587-2.329 1.998-3.22 2.268-.89.27-1.801.27-2.692 0-.891-.27-1.632-.68-3.22-2.268L3.47 20.566c-1.587-1.588-1.998-2.329-2.268-3.22a4.577 4.577 0 0 1 0-2.692c.27-.891.68-1.632 2.268-3.22l7.964-7.964c1.588-1.587 2.329-1.998 3.22-2.268.89-.27 1.801-.27 2.692 0 .891.27 1.632.68 3.22 2.268zM14 7v10.215c0 .503.07.773.2 1.018.131.244.323.436.567.567.245.13.515.2 1.018.2h.43c.503 0 .773-.07 1.018-.2.244-.131.436-.323.567-.567.13-.245.2-.515.2-1.018V7h-4zm1.785 14c-.503 0-.773.07-1.018.2-.244.131-.436.323-.567.567-.13.245-.2.515-.2 1.018v.43c0 .503.07.773.2 1.018.131.244.323.436.567.567.245.13.515.2 1.018.2h.43c.503 0 .773-.07 1.018-.2.244-.131.436-.323.567-.567.13-.245.2-.515.2-1.018v-.43c0-.503-.07-.773-.2-1.018a1.363 1.363 0 0 0-.567-.567c-.245-.13-.515-.2-1.018-.2h-.43z"
          fill-rule="nonzero"
        />
      </svg>
    </i>
  </div>
  <div
    class="c3"
  >
    Warning Text
  </div>
</div>
`;
